UI alignment fix attempt

--- a/sustainabilityPledge/src/app/food/food.component.css
+++ b/sustainabilityPledge/src/app/food/food.component.css
@@ -41,6 +41,7 @@ input[type="radio"]:checked + label {
   .greyBox {
     margin: auto;
     width: 40%;
+    align-self: center;
     min-width: 360px;
     background: #F2F2F2;
     display: block;
