--- a/sustainabilityPledge/src/app/water/water.component.css
+++ b/sustainabilityPledge/src/app/water/water.component.css
@@ -42,6 +42,7 @@ input[type="radio"]:checked + label {
   .greyBox {
     margin: 0 auto;
     width: 40%;
+    align-self: center;
     min-width: 360px;
     background: #F2F2F2;
     display: block;
